Adds image, tweaks wording

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<div lang="fr">
 
 <div>
     <meta charset="UTF-8">
@@ -121,7 +121,5 @@
             </fieldset>
         </div>
     </div>
-
 </div>
-
 </div>
