(fix) Replace empty tags with  and adjust instructions accordingly

--- a/index.html
+++ b/index.html
@@ -1,125 +1,127 @@
-<>
-<div lang="fr">
+<fixme>
 
-<div>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <div>Tech Returners Surgery: Home</div>
-</div>
+<fixme>
+	<fixme lang="fr">
 
-<div>
-    <div>
-        <a href="#">Tech Returners Surgery</a>
-        <a href="tel:03330509138">0333 050 9138</a>
-    </div>
+	<fixme>
+    	<fixme charset="UTF-8">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<fixme>Tech Returners Surgery: Home</fixme>
+	</fixme>
 
-    <nav>
-        <div>
-            <div><a href="#">Home</a></div>
-            <div><a href="#">Services</a></div>
-            <div><a href="#">Team</a></div>
-            <div><a href="#">Patient Information</a></div>
-            <li><a href="#">Well-being Centre</a></li>
-        </div>
-    </nav>
+	<fixme>
+		<fixme>
+			<a href="#">Tech Returners Surgery</a>
+			<a href="tel:03330509138">0333 050 9138</a>
+		</fixme>
 
-    <label for="site-search">Search...</label>
-    <input type="search" id="site-search" name="search" aria-label="Search through site content">
-    <div>Search</div>
+		<nav>
+			<div>
+				<div><a href="#">Home</a></div>
+				<div><a href="#">Services</a></div>
+				<div><a href="#">Team</a></div>
+				<div><a href="#">Patient Information</a></div>
+				<li><a href="#">Well-being Centre</a></li>
+			</div>
+		</nav>
 
-    <div>
-        <h3><>COVID Restriction Update</></h3>
+		<label for="site-search">Search...</label>
+		<input type="search" id="site-search" name="search" aria-label="Search through site content">
+		<div>Search</div>
 
-        <p>Throughout the pandemic we have strove to make the surgery as safe as possible for all our patients and
-            staff, we will continue to do so.</p>
+		<fixme>
+			<h3><fixme>COVID Restriction Update</fixme></h3>
 
-        <p>From the <div>19th July 2021 nothing will change at the Surgery</div> Patients will <>still
-                need</> to
-            wear a mask, socially distance and use hand sanitiser in the surgery and staff will continue to
-            wear PPE.
-        </p>
+			<p>Throughout the pandemic we have strove to make the surgery as safe as possible for all our patients and
+				staff, we will continue to do so.</p>
 
-        <p>If you arrive without a mask and are not exempt, you will be asked to leave.</p>
-    </div>
+			<p>From the <fixme>19th July 2021 nothing will change at the Surgery</fixme> Patients will <fixme>still
+					need</fixme> to
+				wear a mask, socially distance and use hand sanitiser in the surgery and staff will continue to
+				wear PPE.
+			</p>
 
-
-    <section>
-        <p>Welcome to the Tech Returners Surgery!</p>
-
-        <img src="./surgery.png" alt="Some doctors instruments, strewn across a blue background">
-
-        <div> The Tech Returners Surgery,<br>
-            115 Mancunian Way,<br>
-            Manchester,<br>
-            M20 3PX
-        </div>
-    </section>
-
-    <div>
-        <p>How to use Ask My Doc?</p>
-
-        <video controls width="250">
-            <source src="#" type="video/webm">
-            <source src="#" type="video/mp4">
-
-            <track kind="captions" srclang="en" src="./ask_my_doc_transcript.vtt" default />
-
-            Sorry, your browser doesn't support embedded videos.
-        </video>
-    </div>
+			<p>If you arrive without a mask and are not exempt, you will be asked to leave.</p>
+		</fixme>
 
 
-    <section>
-        <p>Need advice or have some feedback for us?</p>
+		<section>
+			<p>Welcome to the Tech Returners Surgery!</p>
 
-        <div>
-            <fieldset>
-                <legend>Send us a message by filling out the form below and one of our Receptionists will be in touch:
-                </legend>
+			<img src="./surgery.png" alt="Some doctors instruments, strewn across a blue background">
 
-                <p>Are you completing this form on behalf of: </p>
+			<div> The Tech Returners Surgery,<br>
+				115 Mancunian Way,<br>
+				Manchester,<br>
+				M20 3PX
+			</div>
+		</section>
 
-                <label for="self">Yourself </label>
-                <input type="checkbox" id="self" name="self">
+		<div>
+			<p>How to use Ask My Doc?</p>
 
-                <label for="another">Someone else </label>
-                <input type="checkbox" id="another" name="another">
+			<video controls width="250">
+				<source src="#" type="video/webm">
+				<source src="#" type="video/mp4">
+
+				<track kind="captions" srclang="en" src="./ask_my_doc_transcript.vtt" default />
+
+				Sorry, your browser doesn't support embedded videos.
+			</video>
+		</div>
 
 
-                <div>
-                    <label for="fname">First Name </label>
-                    <input type="text" id="fname" name="fname" required>
-                </div>
+		<section>
+			<p>Need advice or have some feedback for us?</p>
 
-                <div>
-                    <label for="lname">Last Name </label>
-                    <input type="text" id="lname" name="lname" required>
-                </div>
+			<div>
+				<fieldset>
+					<legend>Send us a message by filling out the form below and one of our Receptionists will be in touch:
+					</legend>
 
-                <div>
-                    <label for="dob">Date of Birth </label>
-                    <input type="date" id="dob" name="dob" required>
-                </div>
+					<p>Are you completing this form on behalf of: </p>
 
-                <div>
-                    <label for="telephone">Telephone Number: </label>
-                    <input type="tel" id="telephone" name="telephone" required>
-                </div>
+					<label for="self">Yourself </label>
+					<input type="checkbox" id="self" name="self">
 
-                <div>
-                    <label for="email">Email: </label>
-                    <input type="email" id="email" name="email" required>
-                </div>
+					<label for="another">Someone else </label>
+					<input type="checkbox" id="another" name="another">
 
-                <div>
-                    <label for="message">Your query or message: </label>
-                    <input type="text" id="message" name="message" required>
-                </div>
 
-                <input type="submit" value="Submit">
-            </fieldset>
-        </div>
-    </div>
-</div>
-</div>
+					<div>
+						<label for="fname">First Name </label>
+						<input type="text" id="fname" name="fname" required>
+					</div>
+
+					<div>
+						<label for="lname">Last Name </label>
+						<input type="text" id="lname" name="lname" required>
+					</div>
+
+					<div>
+						<label for="dob">Date of Birth </label>
+						<input type="date" id="dob" name="dob" required>
+					</div>
+
+					<div>
+						<label for="telephone">Telephone Number: </label>
+						<input type="tel" id="telephone" name="telephone" required>
+					</div>
+
+					<div>
+						<label for="email">Email: </label>
+						<input type="email" id="email" name="email" required>
+					</div>
+
+					<div>
+						<label for="message">Your query or message: </label>
+						<input type="text" id="message" name="message" required>
+					</div>
+
+					<input type="submit" value="Submit">
+				</fieldset>
+			</div>
+		</fixme>
+	</fixme>
+</fixme>
