Adds more fixme tags, tweaks read me

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <fixme>
-
-<fixme>
 	<fixme lang="fr">
 
 	<fixme>
@@ -16,19 +14,19 @@
 			<a href="tel:03330509138">0333 050 9138</a>
 		</fixme>
 
-		<nav>
-			<div>
-				<div><a href="#">Home</a></div>
-				<div><a href="#">Services</a></div>
-				<div><a href="#">Team</a></div>
-				<div><a href="#">Patient Information</a></div>
-				<li><a href="#">Well-being Centre</a></li>
-			</div>
-		</nav>
+		<fixme>
+			<fixme>
+				<fixme><a href="#">Home</a></fixme>
+				<fixme><a href="#">Services</a></fixme>
+				<fixme><a href="#">Team</a></fixme>
+				<fixme><a href="#">Patient Information</a></fixme>
+				<fixme><a href="#">Well-being Centre</a></fixme>
+			</fixme>
+		</fixme>
 
 		<label for="site-search">Search...</label>
 		<input type="search" id="site-search" name="search" aria-label="Search through site content">
-		<div>Search</div>
+		<fixme>Search</fixme>
 
 		<fixme>
 			<h3><fixme>COVID Restriction Update</fixme></h3>
@@ -49,33 +47,33 @@
 		<section>
 			<p>Welcome to the Tech Returners Surgery!</p>
 
-			<img src="./surgery.png" alt="Some doctors instruments, strewn across a blue background">
+			<fixme src="./surgery.png">
 
-			<div> The Tech Returners Surgery,<br>
+			<fixme> The Tech Returners Surgery,<br>
 				115 Mancunian Way,<br>
 				Manchester,<br>
 				M20 3PX
-			</div>
+			</fixme>
 		</section>
 
-		<div>
-			<p>How to use Ask My Doc?</p>
+		<section>
+			<h2>How to use Ask My Doc?</h2>
 
-			<video controls width="250">
+			<fixme controls width="250">
 				<source src="#" type="video/webm">
 				<source src="#" type="video/mp4">
 
 				<track kind="captions" srclang="en" src="./ask_my_doc_transcript.vtt" default />
 
 				Sorry, your browser doesn't support embedded videos.
-			</video>
-		</div>
+			</fixme>
+		</section>
 
 
 		<section>
-			<p>Need advice or have some feedback for us?</p>
+			<h2>Need advice or have some feedback for us?</h2>
 
-			<div>
+			<fixme>
 				<fieldset>
 					<legend>Send us a message by filling out the form below and one of our Receptionists will be in touch:
 					</legend>
@@ -121,7 +119,7 @@
 
 					<input type="submit" value="Submit">
 				</fieldset>
-			</div>
+			</fixme>
 		</fixme>
 	</fixme>
 </fixme>
