--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<input type="search" id="site-search" name="search" aria-label="Search through site content">
 		<fixme>Search</fixme>
 
-		<fixme>
+		<section>
 			<h3><fixme>COVID Restriction Update</fixme></h3>
 
 			<p>Throughout the pandemic we have strove to make the surgery as safe as possible for all our patients and
@@ -41,11 +41,11 @@
 			</p>
 
 			<p>If you arrive without a mask and are not exempt, you will be asked to leave.</p>
-		</fixme>
+		</section>
 
 
-		<section>
-			<p>Welcome to the Tech Returners Surgery!</p>
+		<fixme>
+			<fixme>Welcome to the Tech Returners Surgery!</fixme>
 
 			<fixme src="./surgery.png">
 
@@ -54,7 +54,7 @@
 				Manchester,<br>
 				M20 3PX
 			</fixme>
-		</section>
+		</fixme>
 
 		<section>
 			<h2>How to use Ask My Doc?</h2>
