Complete HTML exercise

--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
-<fixme>
-	<fixme lang="fr">
+<!DOCTYPE html>
+	<html lang="fr">
 
-	<fixme>
-    	<fixme charset="UTF-8">
+	<head>
+    	<meta charset="UTF-8">
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	<fixme>Tech Returners Surgery: Home</fixme>
-	</fixme>
+    	<title>Tech Returners Surgery: Home</title>
+	</head>
 
-	<fixme>
-		<fixme>
+	<body>
+		<header> 
 			<a href="#">Tech Returners Surgery</a>
 			<a href="tel:03330509138">0333 050 9138</a>
-		</fixme>
+		</header>
 
-		<fixme>
-			<fixme>
-				<fixme><a href="#">Home</a></fixme>
-				<fixme><a href="#">Services</a></fixme>
-				<fixme><a href="#">Team</a></fixme>
-				<fixme><a href="#">Patient Information</a></fixme>
-				<fixme><a href="#">Well-being Centre</a></fixme>
-			</fixme>
-		</fixme>
+		<nav>
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Services</a></li>
+				<li><a href="#">Team</a></li>
+				<li><a href="#">Patient Information</a></li>
+				<li><a href="#">Well-being Centre</a></li>
+			</ul>
+		</nav>
 
 		<label for="site-search">Search...</label>
 		<input type="search" id="site-search" name="search" aria-label="Search through site content">
-		<fixme>Search</fixme>
+		<button>Search</button>
 
 		<section>
-			<h3><fixme>COVID Restriction Update</fixme></h3>
+			<h3><strong>COVID Restriction Update</strong></h3>
 
 			<p>Throughout the pandemic we have strove to make the surgery as safe as possible for all our patients and
 				staff, we will continue to do so.</p>
 
-			<p>From the <fixme>19th July 2021 nothing will change at the Surgery</fixme> Patients will <fixme>still
-					need</fixme> to
+			<p>From the <strong>19th July 2021 nothing will change at the Surgery</strong> Patients will <em>still
+					need</em> to
 				wear a mask, socially distance and use hand sanitiser in the surgery and staff will continue to
 				wear PPE.
 			</p>
@@ -44,36 +44,36 @@
 		</section>
 
 
-		<fixme>
-			<fixme>Welcome to the Tech Returners Surgery!</fixme>
+		<section>
+			<h3>Welcome to the Tech Returners Surgery!</h3>
 
-			<fixme src="./surgery.png">
+			<img src="./surgery.png">
 
-			<fixme> The Tech Returners Surgery,<br>
+			<address> The Tech Returners Surgery,<br>
 				115 Mancunian Way,<br>
 				Manchester,<br>
 				M20 3PX
-			</fixme>
-		</fixme>
+			</address>
+		</section>
 
 		<section>
 			<h2>How to use Ask My Doc?</h2>
 
-			<fixme controls width="250">
+			<video controls width="250">
 				<source src="#" type="video/webm">
 				<source src="#" type="video/mp4">
 
 				<track kind="captions" srclang="en" src="./ask_my_doc_transcript.vtt" default />
 
 				Sorry, your browser doesn't support embedded videos.
-			</fixme>
+			</video>
 		</section>
 
 
 		<section>
 			<h2>Need advice or have some feedback for us?</h2>
 
-			<fixme>
+			<form>
 				<fieldset>
 					<legend>Send us a message by filling out the form below and one of our Receptionists will be in touch:
 					</legend>
@@ -119,7 +119,7 @@
 
 					<input type="submit" value="Submit">
 				</fieldset>
-			</fixme>
-		</fixme>
-	</fixme>
-</fixme>
+			</form>
+		</section>
+	</body>
+</html>
